wip(operations): route REST ingestion through recorded owner